# kohi-engine-series

./: .clang-format  CMakeLists.txt
engine/: CMakeLists.txt  build.bat  build.sh
engine/src/: defines.h  entry.h  game_types.h  test.c
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  input.c  input.h  kmemory.c  kstring.c  kstring.h  logger.c  logger.h
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.inl
testbed/: CMakeLists.txt  build.bat
testbed/src/: entry.c  main.c
